@@ -121,13 +121,41 @@ class RemoteGlobalCollectTest < Test::Unit::TestCase
         name: 'Spreedly Airlines',
         flight_date: '20190810',
         passenger_name: 'Randi Smith',
+        is_eticket: 'true',
+        is_restricted_ticket: 'true',
+        is_third_party: 'true',
+        issue_date: 'tday',
+        merchant_customer_id: 'MIDs',
+        passengers: [
+          { first_name: 'Randi',
+            surname: 'Smith',
+            surname_prefix: 'S',
+            title: 'Mr' },
+          { first_name: 'Julia',
+            surname: 'Smith',
+            surname_prefix: 'S',
+            title: 'Mrs' }
+        ],
         flight_legs: [
-          { arrival_airport: 'BDL',
-            origin_airport: 'RDU',
-            date: '20190810',
+          { airline_class: 'ZZ',
+            arrival_airport: 'BDL',
+            arrival_time: '0520',
             carrier_code: 'SA',
+            conjunction_ticket: 'ct-12',
+            coupon_number: '1',
+            date: '20190810',
+            departure_time: '1220',
+            endorsement_or_restriction: 'no',
+            exchange_ticket: 'no',
+            fare: '20000',
+            fare_basis: 'fareBasis',
+            fee: '12',
+            flight_number: '1',
             number: 596,
-            airline_class: 'ZZ' },
+            origin_airport: 'RDU',
+            passenger_class: 'coach',
+            stopover_code: 'permitted',
+            taxes: '700' },
           { arrival_airport: 'RDU',
             origin_airport: 'BDL',
             date: '20190817',
